--- a/event/assets/partials/partial-itinerary.html
+++ b/event/assets/partials/partial-itinerary.html
@@ -98,7 +98,7 @@
                                             <td>6:45 PM – 10:00 PM</td>
                                             <td>Central Lawn</td>
                                         </tr>
-                                   
+
 
                                     </tbody>
                                 </table>
@@ -150,7 +150,7 @@
                                         <tr>
                                             <td>Catch The Phrase/Let me Speak</td>
                                             <td>9:30AM -12:00 NOON</td>
-                                            <td>C 501 (App Sci), C 401 (IT) 
+                                            <td>401 Block-C 
 </td>
                                         </tr>
                                         <tr>
@@ -183,11 +183,11 @@
                                             <td>10:00 AM - 1:00 PM</td>
                                             <td>QUADRANGLE A BLOCK</td>
                                         </tr>
-                                     
+
                                         <tr>
                                             <td>Quiz</td>
                                             <td>12:30 PM - 4:30 PM</td>
-                                            <td>CAD Lab (ECE),CAD Lab, CP - 15 (EE), BT-7, BT - 14 (ME),CG - 06 (CE), IBM Lab (App Sci) 
+                                            <td>CAD Lab (ECE),CAD Lab, CP - 15 (EE), BT-7, BT - 14 (ME),CG - 06 (CE), Seminar Hall (501) Block-C (App Sci)
 </td>
                                         </tr>
                                         <tr>
@@ -210,7 +210,7 @@
                                             <td>7:30 PM – 10:00 PM</td>
                                             <td>Central Lawn</td>
                                         </tr>
-                                    
+
 
                                     </tbody>
                                 </table>
@@ -323,7 +323,7 @@
                                             <td>6:45 PM – 9:45 PM</td>
                                             <td>Central Lawn</td>
                                         </tr>
-                                     
+
                                     </tbody>
                                 </table>
                             </div>
@@ -359,7 +359,7 @@
                                             <td>9:30 AM - 7 :30 PM</td>
                                             <td>CP-21,22,23</td>
                                         </tr>
-                                    
+
                                         <tr>
                                             <td>Paintball </td>
                                             <td>9:30 AM - 6:30 PM</td>
@@ -399,28 +399,28 @@
                                             <td>Online Session (Alumni)</td>
                                             <td>12:00 Noon – 1:00 PM </td>
                                             <td>Conference Hall A Block</td>
-                                        </tr>  
+                                        </tr>
 										<tr>
                                             <td>Fork Lifter</td>
                                             <td>12:30 PM – 3:30 PM</td>
                                             <td>B Block Fountain Area (ME)</td>
-                                        </tr> 
+                                        </tr>
 										<tr>
                                             <td>Java Lets</td>
                                             <td>12:30 PM -2:30 PM</td>
                                             <td>IBM Lab (CSE & IT)</td>
-                                        </tr>   
+                                        </tr>
 										<tr>
                                             <td>Combatant</td>
                                             <td>12:30 PM – 3:30 PM</td>
                                             <td>Comm. lab (ECE)
 </td>
-                                        </tr>	
+                                        </tr>
                    <tr>
                                               <td>War Tech Ren-17</td>
                                               <td>3:30 PM – 6:30 PM</td>
                                               <td>EE Lab (EE)</td>
-                                        </tr>	
+                                        </tr>
 										<tr>
                                             <td>Formula Zero</td>
                                             <td>12:30 PM – 4:00 PM</td>
@@ -434,43 +434,42 @@
                                         </tr>	<tr>
                                             <td>Panel Discussion (Alumni)</td>
                                             <td>1:30 PM – 3:00 PM)</td>
-                                          
+
                                             <td>Conference Hall A Block
 </td>
                                         </tr>
      	<tr>
                                             <td>Mad House</td>
                                             <td>2:00 PM - 4:30 PM</td>
-                                          
+
                                             <td>B-301 & LT – 7
 </td>
                                         </tr>
      	<tr>
                                             <td>IV Show</td>
                                             <td>2:30 PM - 4:30 PM</td>
-                                          
+
                                             <td>C - 501 (Mech)</td>
                                         </tr>
      	<tr>
                                             <td>Junkyard Wars</td>
                                             <td>3:30 PM - 6:30 PM</td>
-                                          
-                                            <td>Volleyball Court (CE)
-CG & CF Floor, C - Block (App Science)
+
+                                            <td>CG, CF Block-C 
 
 </td>
-                                        </tr>	
+                                        </tr>
 										<tr>
                                             <td>Footloose</td>
                                             <td>5:00 PM – 7:30 PM</td>
-                                          
+
                                             <td>Quadrangle A Block
 
 </td>
                                         </tr>	<tr>
                                             <td>Certificate Distribution</td>
                                             <td>7:30 PM – 8:30 PM</td>
-                                          
+
                                             <td>Quadrangle A Block
 </td>
                                         </tr>
