--- a/event/assets/partials/partial-sponsors.html
+++ b/event/assets/partials/partial-sponsors.html
@@ -76,6 +76,35 @@
             </article>
 
             <article>
+                <div class="col-sm-3">
+                  <h2>Feast Partner</h2>
+                  <div class="sponsor col-sm-offset-2 col-sm-8">
+                    <img src="assets/img/logo/sponsors/new/burger.jpg" />
+                  </div>
+                </div>
+                <div class="col-sm-3">
+                    <h2>Radio Partner</h2>
+                    <div class="sponsor col-sm-offset-1 col-sm-10">
+                        <img src="assets/img/logo/sponsors/new/my.jpg"  />
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <h2>Refreshing Partner</h2>
+                    <div class="sponsor">
+                        <img src="assets/img/logo/sponsors/new/tripling.png"  />
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <h2>Magazine Partner</h2>
+                    <div class="sponsor">
+                        <img src="assets/img/logo/sponsors/new/shubh.jpg" />
+                    </div>
+                </div>
+
+
+            </article>
+
+            <article>
                 <h2>Education Partners</h2>
                 <div class="sponsor col-sm-4">
                     <img src="assets/img/logo/sponsors/new/matrix.jpg" style="padding-top: 3em;"/>
@@ -86,11 +115,14 @@
                 <div class="sponsor col-sm-4">
                     <img src="assets/img/logo/sponsors/new/appin.jpg" />
                 </div>
-                <div class="sponsor col-sm-4 col-sm-offset-2" style="padding-top: 3em;">
+                <div class="sponsor col-sm-4" style="padding-top: 3em;">
                     <img src="assets/img/logo/sponsors/new/engiaca.png" />
                 </div>
                 <div class="sponsor col-sm-4">
                     <img src="assets/img/logo/sponsors/new/engineer.png" />
+                </div>
+                <div class="sponsor col-sm-4">
+                    <img src="assets/img/logo/sponsors/new/yuwam.png" />
                 </div>
 
             </article>
@@ -123,8 +155,13 @@
             <article>
 
 
-
-            </article>
+            <div class ="col-sm-12">
+                <h2>Remedy Partner</h2>
+                <div class="sponsor col-sm-4 col-sm-offset-4">
+                    <img src="assets/img/logo/sponsors/new/skiniti.png" style="padding: 0;margin-top: 7px;"/>
+                </div>
+              </div>
+              </article>
 
         </div>
     </div>
