--- a/event/assets/partials/partial-sponsors.html
+++ b/event/assets/partials/partial-sponsors.html
@@ -48,15 +48,15 @@
             </article>
             <article>
                 <div class="col-sm-3">
-                  <h2>Beverage Partner</h2>
-                  <div class="sponsor col-sm-offset-2 col-sm-8">
-                    <img src="assets/img/logo/sponsors/new/pop.png" />
+                  <h2>Remedy Partner</h2>
+                  <div class="sponsor ">
+                    <img src="assets/img/logo/sponsors/new/skiniti.png" style="padding-top:4em;"/>
                   </div>
                 </div>
                 <div class="col-sm-3">
                     <h2>Interior Design Partner</h2>
                     <div class="sponsor col-sm-offset-1 col-sm-10">
-                        <img src="assets/img/logo/sponsors/new/kajaria.png" style="padding-top:4em;" />
+                        <img src="assets/img/logo/sponsors/new/om.jpg" style="padding-top:4em;" />
                     </div>
                 </div>
                 <div class="col-sm-3">
@@ -152,16 +152,7 @@
                     <img src="assets/img/logo/sponsors/new/hookmeup.jpg" />
                 </div>
             </article>
-            <article>
 
-
-            <div class ="col-sm-12">
-                <h2>Remedy Partner</h2>
-                <div class="sponsor col-sm-4 col-sm-offset-4">
-                    <img src="assets/img/logo/sponsors/new/skiniti.png" style="padding: 0;margin-top: 7px;"/>
-                </div>
-              </div>
-              </article>
 
         </div>
     </div>
