--- a/event/assets/partials/partial-itinerary.html
+++ b/event/assets/partials/partial-itinerary.html
@@ -150,7 +150,7 @@
                                         <tr>
                                             <td>Catch The Phrase/Let me Speak</td>
                                             <td>9:30AM -12:00 NOON</td>
-                                            <td>401 Block-C 
+                                            <td> C 501 (IT) C 401 (App Sci)
 </td>
                                         </tr>
                                         <tr>
