--- a/event/assets/partials/partial-sponsors.html
+++ b/event/assets/partials/partial-sponsors.html
@@ -103,7 +103,14 @@
 
 
             </article>
-
+            <article>
+            <div class ="col-sm-12">
+                <h2>style Partner</h2>
+                <div class="sponsor col-sm-4 col-sm-offset-4">
+                    <img src="assets/img/logo/sponsors/new/Juniper.jpg" style="padding: 0;margin-top: 7px;"/>
+                </div>
+              </div>
+              </article>
             <article>
                 <h2>Education Partners</h2>
                 <div class="sponsor col-sm-4">
@@ -124,6 +131,12 @@
                 <div class="sponsor col-sm-4">
                     <img src="assets/img/logo/sponsors/new/yuwam.png" />
                 </div>
+                <div class="sponsor col-sm-4">
+                    <img src="assets/img/logo/sponsors/new/made.png" />
+                </div>
+                <div class="sponsor col-sm-4">
+                    <img src="assets/img/logo/sponsors/new/gate.png" />
+                </div>
 
             </article>
             <article>
@@ -132,7 +145,7 @@
                     <img src="assets/img/logo/sponsors/new/mutuals.jpg" />
                 </div>
                 <div class="sponsor col-sm-4">
-                    <img src="assets/img/logo/sponsors/new/pizzacity.jpg" />
+                    <img src="assets/img/logo/sponsors/new/cafe.jpeg" />
                 </div>
                 <div class="sponsor col-sm-4" style="margin-top:20px;">
                     <img src="assets/img/logo/sponsors/new/g&g.jpg" />
