--- a/event/assets/partials/partial-sponsors.html
+++ b/event/assets/partials/partial-sponsors.html
@@ -18,6 +18,24 @@
             </div>
             </article>
             <article>
+
+              <div class="col-sm-6">
+                <h2>Event Partner</h2>
+              <div class="sponsor col-sm-10 col-sm-offset-1" >
+                  <img src="assets/img/logo/sponsors/new/pustak.jpg" />
+              </div>
+            </div>
+            
+            <div class ="col-sm-6">
+                <h2>style Partner</h2>
+                <div class="sponsor col-sm-10 col-sm-offset-1">
+                    <img src="assets/img/logo/sponsors/new/Juniper.jpg" />
+                </div>
+              </div>
+
+
+              </article>
+            <article>
                 <div class="col-sm-3">
                     <h2>Ethinic Partner</h2>
                     <div class="sponsor col-sm-offset-2 col-sm-10">
@@ -26,12 +44,12 @@
                 </div>
                 </div>
 
-                <div class="col-sm-6" style="padding-top:1em;">
-                  <h2>Event Partners</h2>
+                <div class="col-sm-6" >
+                  <h2>Sports Partner</h2>
 
                   <div class="col-sm-12">
-                  <div class="sponsor col-sm-10 col-sm-offset-1" >
-                      <img src="assets/img/logo/sponsors/new/pustak.jpg" />
+                  <div class="sponsor col-sm-8 col-sm-offset-2" >
+                      <img src="assets/img/logo/sponsors/new/logo.png" />
                   </div>
                 </div>
 
@@ -40,7 +58,7 @@
 
                 <div class="col-sm-3">
                     <h2>Hotel Partner</h2>
-                    <div class="sponsor col-sm-offset-1 col-sm-10">
+                    <div class="sponsor col-sm-offset-1 col-sm-10" style="padding-top:1em;">
                         <img src="assets/img/logo/sponsors/new/royal.gif" />
                     </div>
                 </div>
@@ -103,14 +121,7 @@
 
 
             </article>
-            <article>
-            <div class ="col-sm-12">
-                <h2>style Partner</h2>
-                <div class="sponsor col-sm-4 col-sm-offset-4">
-                    <img src="assets/img/logo/sponsors/new/Juniper.jpg" style="padding: 0;margin-top: 7px;"/>
-                </div>
-              </div>
-              </article>
+
             <article>
                 <h2>Education Partners</h2>
                 <div class="sponsor col-sm-4">
@@ -137,6 +148,9 @@
                 <div class="sponsor col-sm-4">
                     <img src="assets/img/logo/sponsors/new/gate.png" />
                 </div>
+                <div class="sponsor col-sm-4">
+                    <img src="assets/img/logo/sponsors/new/Youstart.png" />
+                </div>
 
             </article>
             <article>
@@ -161,10 +175,29 @@
                 <div class="sponsor col-sm-4">
                     <img src="assets/img/logo/sponsors/new/tc.jpg" />
                 </div>
-                <div class="sponsor col-sm-12">
+                <div class="sponsor col-sm-12 ">
                     <img src="assets/img/logo/sponsors/new/hookmeup.jpg" />
                 </div>
+
             </article>
+            <article>
+            <div class ="col-sm-4 col-sm-offset-2">
+                <h2>Feast Partner</h2>
+                <div class="sponsor col-sm-6 col-sm-offset-3">
+                    <img src="assets/img/logo/sponsors/new/burger.jpg" />
+                </div>
+              </div>
+
+
+
+                <div class="col-sm-4">
+                  <h2>Salon Partner</h2>
+                <div class="sponsor col-sm-6 col-sm-offset-3" >
+                    <img src="assets/img/logo/sponsors/new/Sizzling.jpg" />
+                </div>
+              </div>
+
+              </article>
 
 
         </div>
