--- a/event/assets/partials/partial-sponsors.html
+++ b/event/assets/partials/partial-sponsors.html
@@ -25,7 +25,7 @@
                   <img src="assets/img/logo/sponsors/new/pustak.jpg" />
               </div>
             </div>
-            
+
             <div class ="col-sm-6">
                 <h2>style Partner</h2>
                 <div class="sponsor col-sm-10 col-sm-offset-1">
@@ -180,24 +180,33 @@
                 </div>
 
             </article>
-            <article>
-            <div class ="col-sm-4 col-sm-offset-2">
-                <h2>Feast Partner</h2>
-                <div class="sponsor col-sm-6 col-sm-offset-3">
-                    <img src="assets/img/logo/sponsors/new/burger.jpg" />
-                </div>
-              </div>
 
-
-
-                <div class="col-sm-4">
+              <article>
+                <div class="sponsor col-sm-3">
                   <h2>Salon Partner</h2>
-                <div class="sponsor col-sm-6 col-sm-offset-3" >
+                <div class="sponsor col-sm-8 col-sm-offset-2" >
                     <img src="assets/img/logo/sponsors/new/Sizzling.jpg" />
                 </div>
               </div>
+              <div class ="sponsor col-sm-6">
+                  <h2>Adventure Partners</h2>
+                  <div class="sponsor col-sm-6 ">
+                      <img src="assets/img/logo/sponsors/new/du.png" />
+                  </div>
 
-              </article>
+                  <div class="sponsor col-sm-6 " >
+                      <img src="assets/img/logo/sponsors/new/vi.png" />
+                  </div>
+                </div>
+
+                <div class ="sponsor col-sm-3 ">
+                    <h2>T-Shirt Partner</h2>
+                    <div class="sponsor col-sm-8 col-sm-offset-2">
+                        <img src="assets/img/logo/sponsors/new/festee.png" />
+                    </div>
+                  </div>
+
+                </article>
 
 
         </div>
