--- a/event/assets/partials/partial-sponsors.html
+++ b/event/assets/partials/partial-sponsors.html
@@ -8,8 +8,6 @@
         </div>
         <div class='event-content' id="sponsors">
           <article>
-
-
           <div class ="col-sm-12">
               <h2>Trading Partner</h2>
               <div class="sponsor col-sm-12">
@@ -18,14 +16,12 @@
             </div>
             </article>
             <article>
-
               <div class="col-sm-6">
                 <h2>Event Partner</h2>
               <div class="sponsor col-sm-10 col-sm-offset-1" >
                   <img src="assets/img/logo/sponsors/new/pustak.jpg" />
               </div>
             </div>
-
             <div class ="col-sm-6">
                 <h2>style Partner</h2>
                 <div class="sponsor col-sm-10 col-sm-offset-1">
@@ -175,8 +171,11 @@
                 <div class="sponsor col-sm-4">
                     <img src="assets/img/logo/sponsors/new/tc.jpg" />
                 </div>
-                <div class="sponsor col-sm-12 ">
+                <div class="sponsor col-sm-4 col-sm-offset-2">
                     <img src="assets/img/logo/sponsors/new/hookmeup.jpg" />
+                </div>
+                <div class="sponsor col-sm-4 ">
+                    <img src="assets/img/logo/sponsors/new/fd.png" />
                 </div>
 
             </article>
@@ -193,22 +192,39 @@
                   <div class="sponsor col-sm-6 ">
                       <img src="assets/img/logo/sponsors/new/du.png" />
                   </div>
-
                   <div class="sponsor col-sm-6 " >
                       <img src="assets/img/logo/sponsors/new/vi.png" />
                   </div>
                 </div>
-
                 <div class ="sponsor col-sm-3 ">
                     <h2>T-Shirt Partner</h2>
                     <div class="sponsor col-sm-8 col-sm-offset-2">
                         <img src="assets/img/logo/sponsors/new/festee.png" />
                     </div>
                   </div>
-
                 </article>
 
+                <article>
+                  <div class="sponsor col-sm-4">
+                    <h2>Biverage Partner</h2>
+                  <div class="sponsor col-sm-8 col-sm-offset-2" >
+                      <img src="assets/img/logo/sponsors/new/bisleri.png" />
+                  </div>
+                </div>
+                <div class ="sponsor col-sm-4">
+                    <h2>Beauty Partners</h2>
+                    <div class="sponsor col-sm-8 col-sm-offset-2">
+                        <img src="assets/img/logo/sponsors/new/kaya.jpg" />
+                    </div>
 
+                  </div>
+                  <div class ="sponsor col-sm-4 ">
+                      <h2>Treat Partner</h2>
+                      <div class="sponsor col-sm-10 col-sm-offset-1">
+                          <img src="assets/img/logo/sponsors/new/sepoy.png" />
+                      </div>
+                    </div>
+                  </article>
         </div>
     </div>
 </main>
