--- a/event/assets/partials/partial-sponsors.html
+++ b/event/assets/partials/partial-sponsors.html
@@ -206,7 +206,7 @@
 
                 <article>
                   <div class="sponsor col-sm-4">
-                    <h2>Biverage Partner</h2>
+                    <h2>Beverage Partner</h2>
                   <div class="sponsor col-sm-8 col-sm-offset-2" >
                       <img src="assets/img/logo/sponsors/new/bisleri.png" />
                   </div>
