--- a/event/assets/partials/partial-sponsors.html
+++ b/event/assets/partials/partial-sponsors.html
@@ -7,15 +7,24 @@
             </div>
         </div>
         <div class='event-content' id="sponsors">
-          <article>
-          <div class ="col-sm-12">
-              <h2>Trading Partner</h2>
-              <div class="sponsor col-sm-12">
-                  <img src="assets/img/logo/sponsors/new/hindustan.gif" style="padding: 0;margin-top: 7px;"/>
+        
+            <article>
+              <div class="col-sm-6">
+               <h2>Trading Partner</h2>
+              <div class="sponsor col-sm-10 col-sm-offset-1" >
+                  <img src="assets/img/logo/sponsors/new/hindustan.gif" />
               </div>
             </div>
-            </article>
-            <article>
+            <div class ="col-sm-6">
+                <h2>Knowledge Partner</h2>
+                <div class="sponsor col-sm-10 col-sm-offset-1">
+                    <img src="assets/img/logo/sponsors/new/KINGS ( knowledge partner).png" />
+                </div>
+              </div>
+
+
+              </article> 
+			  <article>
               <div class="col-sm-6">
                 <h2>Event Partner</h2>
               <div class="sponsor col-sm-10 col-sm-offset-1" >
@@ -23,7 +32,7 @@
               </div>
             </div>
             <div class ="col-sm-6">
-                <h2>style Partner</h2>
+                <h2>Style Partner</h2>
                 <div class="sponsor col-sm-10 col-sm-offset-1">
                     <img src="assets/img/logo/sponsors/new/Juniper.jpg" />
                 </div>
@@ -40,7 +49,7 @@
                 </div>
                 </div>
 
-                <div class="col-sm-6" >
+                <div class="col-sm-3" >
                   <h2>Sports Partner</h2>
 
                   <div class="col-sm-12">
@@ -56,6 +65,13 @@
                     <h2>Hotel Partner</h2>
                     <div class="sponsor col-sm-offset-1 col-sm-10" style="padding-top:1em;">
                         <img src="assets/img/logo/sponsors/new/royal.gif" />
+                    </div>
+                </div>
+				
+                <div class="col-sm-3">
+                    <h2>Health Partner</h2>
+                    <div class="sponsor col-sm-offset-1 col-sm-10" style="padding-top:1em;">
+                        <img src="assets/img/logo/sponsors/new/Lifcare_logo_green.jpg" />
                     </div>
                 </div>
 
@@ -212,7 +228,7 @@
                   </div>
                 </div>
                 <div class ="sponsor col-sm-4">
-                    <h2>Beauty Partners</h2>
+                    <h2>Beauty Partner</h2>
                     <div class="sponsor col-sm-8 col-sm-offset-2">
                         <img src="assets/img/logo/sponsors/new/kaya.jpg" />
                     </div>
