--- a/event/assets/partials/partial-sponsors.html
+++ b/event/assets/partials/partial-sponsors.html
@@ -221,23 +221,29 @@
                 </article>
 
                 <article>
-                  <div class="sponsor col-sm-4">
+                  <div class="sponsor col-sm-3">
                     <h2>Beverage Partner</h2>
                   <div class="sponsor col-sm-8 col-sm-offset-2" >
                       <img src="assets/img/logo/sponsors/new/bisleri.png" />
                   </div>
                 </div>
-                <div class ="sponsor col-sm-4">
+                <div class ="sponsor col-sm-3">
                     <h2>Beauty Partner</h2>
                     <div class="sponsor col-sm-8 col-sm-offset-2">
                         <img src="assets/img/logo/sponsors/new/kaya.jpg" />
                     </div>
 
                   </div>
-                  <div class ="sponsor col-sm-4 ">
+                  <div class ="sponsor col-sm-3 ">
                       <h2>Treat Partner</h2>
                       <div class="sponsor col-sm-10 col-sm-offset-1">
                           <img src="assets/img/logo/sponsors/new/sepoy.png" />
+                      </div>
+                    </div> 
+					<div class ="sponsor col-sm-3 ">
+                      <h2>Shopping Partner</h2>
+                      <div class="sponsor col-sm-10 col-sm-offset-1">
+                          <img src="assets/img/logo/sponsors/new/LogoHD.png" />
                       </div>
                     </div>
                   </article>
