--- a/event/assets/partials/partial-sponsors.html
+++ b/event/assets/partials/partial-sponsors.html
@@ -247,6 +247,29 @@
                       </div>
                     </div>
                   </article>
+		<article>
+                  <div class="sponsor col-sm-4">
+                    <h2>Printing Partner</h2>
+                  <div class="sponsor col-sm-10 col-sm-offset-1" >
+                      <img src="assets/img/logo/sponsors/new/titu.png" />
+                  </div>
+                </div>
+                <div class ="sponsor col-sm-4">
+                    <h2>Automobile Partner</h2>
+                    <div class="sponsor col-sm-10 col-sm-offset-1">
+                        <img src="assets/img/logo/sponsors/new/um.jpg" />
+                    </div>
+
+                  </div>
+                  <div class ="sponsor col-sm-4 ">
+                      <h2>Hangout Partner</h2>
+                      <div class="sponsor col-sm-10 col-sm-offset-1">
+                          <img src="assets/img/logo/sponsors/new/west.png" />
+                      </div>
+                    </div> 
+			
+                  </article>
+		
         </div>
     </div>
 </main>
