--- a/event/assets/partials/partial-team.html
+++ b/event/assets/partials/partial-team.html
@@ -16,6 +16,8 @@
                     <li role="presentation"><a data-target="#tab4" aria-controls="tab4" role="tab" data-toggle="tab">Social Media</a></li>
                     <li role="presentation"><a data-target="#tab5" aria-controls="tab5" role="tab" data-toggle="tab">Accomodation</a></li>
                     <li role="presentation"><a data-target="#tab6" aria-controls="tab6" role="tab" data-toggle="tab">TEDx</a></li>
+                    <li role="presentation"><a data-target="#tab7" aria-controls="tab7" role="tab" data-toggle="tab">Promotion</a></li>
+
                 </ul>
                 <div class="tab-content">
                     <div role="tabpanel" class="tab-pane fade text-center" ng-class="{'active in': $first}" id="tab{{$index}}" ng-repeat="members in memberCategories">
