--- a/event/assets/partials/partial-sponsors.html
+++ b/event/assets/partials/partial-sponsors.html
@@ -7,7 +7,7 @@
             </div>
         </div>
         <div class='event-content' id="sponsors">
-        
+
             <article>
               <div class="col-sm-6">
                <h2>Trading Partner</h2>
@@ -23,7 +23,7 @@
               </div>
 
 
-              </article> 
+              </article>
 			  <article>
               <div class="col-sm-6">
                 <h2>Event Partner</h2>
@@ -67,7 +67,7 @@
                         <img src="assets/img/logo/sponsors/new/royal.gif" />
                     </div>
                 </div>
-				
+
                 <div class="col-sm-3">
                     <h2>Health Partner</h2>
                     <div class="sponsor col-sm-offset-1 col-sm-10" style="padding-top:1em;">
@@ -239,7 +239,7 @@
                       <div class="sponsor col-sm-10 col-sm-offset-1">
                           <img src="assets/img/logo/sponsors/new/sepoy.png" />
                       </div>
-                    </div> 
+                    </div>
 					<div class ="sponsor col-sm-3 ">
                       <h2>Shopping Partner</h2>
                       <div class="sponsor col-sm-10 col-sm-offset-1">
@@ -248,28 +248,46 @@
                     </div>
                   </article>
 		<article>
-                  <div class="sponsor col-sm-4">
+                  <div class="sponsor col-sm-3">
                     <h2>Printing Partner</h2>
                   <div class="sponsor col-sm-10 col-sm-offset-1" >
                       <img src="assets/img/logo/sponsors/new/titu.png" />
                   </div>
                 </div>
-                <div class ="sponsor col-sm-4">
+                <div class ="sponsor col-sm-3">
                     <h2>Automobile Partner</h2>
                     <div class="sponsor col-sm-10 col-sm-offset-1">
                         <img src="assets/img/logo/sponsors/new/um.jpg" />
                     </div>
 
                   </div>
-                  <div class ="sponsor col-sm-4 ">
+                  <div class ="sponsor col-sm-3 ">
                       <h2>Hangout Partner</h2>
                       <div class="sponsor col-sm-10 col-sm-offset-1">
                           <img src="assets/img/logo/sponsors/new/west.png" />
                       </div>
-                    </div> 
-			
+                    </div>
+                    <div class ="sponsor col-sm-3">
+                        <h2>Vehicle Protection Partner</h2>
+                        <div class="sponsor col-sm-10 col-sm-offset-1">
+                            <img src="assets/img/logo/sponsors/new/CERAMIC.jpg" />
+                        </div>
+                      </div>
+
                   </article>
-		
+
+                  <article>
+                                <div class="sponsor col-sm-4 col-sm-offset-4">
+                                  <h2>Adventure Partner</h2>
+                                <div class="sponsor col-sm-10 col-sm-offset-1" >
+                                    <img src="assets/img/logo/sponsors/new/Life.png" />
+                                </div>
+                              </div>
+
+
+                                </article>
+
+
         </div>
     </div>
 </main>
